# MarkDialog

./: .gitignore  Cargo.toml  README.md  README_zh_CN.md  usage.txt
built_res/: Cargo.toml
built_res/src/: lib.rs  res_sentences.rs
built_res/src/structs/: sentence.rs
converter/: Cargo.toml  usage.txt  version.txt
converter/src/: lib.rs  parse.rs  syntax_checker.rs  utils.rs
parser/: Cargo.toml
parser/src/: error.rs  lib.rs  parse.rs  syntax_checker.rs
parser/src/utils/: path_fmt.rs
player/: Cargo.toml
player/src/: lib.rs
src/: lib.rs  main.rs
