[package]
name = "markdialog"
edition = "2024"

[workspace]
package.version = "0.1.0"
members = [
    "gen",       # Generate Resource
    "gen/macros",
    "player",    # Dialog Player
    "converter"  # Markdown Converter
]

[dependencies]
res_gen = { path = "gen" }
markdialog_player = { path = "player" }
markdialog_converter = { path = "converter" }
