[package]
name = "markdialog"
edition = "2024"
version = "0.1.0"
authors = ["Weicao-CatilGrass"]
description = "Write your story with Markdown!"
repository = "https://github.com/CatilGrass/MarkDialog"
license-file = "LICENSE-MIT"
readme = "README.md"
keywords = ["dialog", "markdown"]
categories = ["game-development"]
publish = true

[workspace]
package.version = "0.1.0"
members = [
    "player",    # Dialog Player
    "converter"  # Markdown Converter
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
sha2 = "0.10"
